Начало переделки своего сэмпла

--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -24,4 +24,8 @@ $unit: 'px'
 	@import "media/tablet-large"
 +mq($desktop#{$unit})
 	@import "media/desktop"
++mq($desktop-large#{$unit})
+	@import "media/desktop-large"
++mq($desktop-fullHD#{$unit})
+	@import "media/desktop-fullHD"
 @import "grid/grid"
