--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -2,11 +2,18 @@
 //$unit : '%'
 
 $mobile: 300
+// 300
 $mobile-large: 460
+// 460
 $tablet: 748
+// 1004
 $tablet-large: 1004
 // 1170
 $desktop: 1170
+// 1500
+$desktop-large: 1500
+// 1920
+$desktop-fullHD: 1920
 
 ///*--==[ Размеры шрифтов ]==--*/
 
