--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -15,17 +15,17 @@ body
 	//+font($font_body,$f_reg,$gray)
 	//+bg(100%,url(../img/bb.png),left bottom,no-repeat)
 $unit: 'px'
-@import "media/mobile"
+@import "media/m"
 +mq($mobile-large#{$unit})
-	@import "media/mobile-large"
+	@import "media/ml"
 +mq($tablet#{$unit})
-	@import "media/tablet"
+	@import "media/t"
 +mq($tablet-large#{$unit})
-	@import "media/tablet-large"
+	@import "media/tl"
 +mq($desktop#{$unit})
-	@import "media/desktop"
+	@import "media/d"
 +mq($desktop-large#{$unit})
-	@import "media/desktop-large"
+	@import "media/dl"
 +mq($desktop-fullHD#{$unit})
-	@import "media/desktop-fullHD"
+	@import "media/dlf"
 @import "grid/grid"
