Начало переделки своего сэмпла

--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -1,5 +1,6 @@
 extends template/main
 append vars
   -
-    page_title= ' Тестовая страница'
+    page_title= 'Главная страница'
 block content
+    h1 Привет мир
