Начало переделки своего сэмпла

--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -3,4 +3,6 @@ append vars
   -
     page_title= 'Главная страница'
 block content
-    h1 Привет мир
+    main
+        h2 Привет мир
+        h3 Да
