Начало переделки своего сэмпла

--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -4,5 +4,5 @@ append vars
     page_title= 'Главная страница'
 block content
     main
-        h2 Привет мир
-        h3 Да
+
+    include parts/slider
