--- a/dev/templates/template/style.pug
+++ b/dev/templates/template/style.pug
@@ -7,6 +7,5 @@ head
     - if(fancy)
         +inc('css','css/jquery.fancybox.css')
     - if(slick)
-        +inc('css','https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css')
-        +inc('css','https://kenwheeler.github.io/slick/slick/slick-theme.css')
-        +inc('css','http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
+        +inc('css','css/slick.css')
+        +inc('css','css/slick-theme.css')
