--- a/dev/sass/media/tl.sass
+++ b/dev/sass/media/tl.sass
@@ -1,2 +1,11 @@
 .section
   +w($tablet-large#{$unit})
+.head
+  &-name
+    +w(inherit)
+  &-language
+    &-select
+      margin-right: 20px
+  .participate
+    span:first-child
+      padding: 11px 17px
