--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -24,9 +24,12 @@ $gap: 0
 
 // --==[ Названия шрифтов]==--
 //+font_inc($f_reg,'path')
-//$f_reg: 'Montseratt-Regular'
-//$f_semibold: ''
+$f_reg: 'SFProDisplayRegular'
+$f_medium: 'SFProDisplayMedium'
 //$f_extralight: ''
 
 ///*--==[ Цвета ]==--*/
 //$black;
+$blue-text: #1353B4
+$head-gray: #b7b7b7
+$head-dark-gray: #6e6e6e
