--- a/dev/sass/media/t.sass
+++ b/dev/sass/media/t.sass
@@ -1,2 +1,36 @@
 .section
   +w($tablet#{$unit})
+.head
+  justify-content: flex-start
+  &-logo
+    display: flex
+    align-items: center
+    margin: 0 30px
+    &:after
+      +wh(1px,50px)
+      display: table
+      content: ''
+      background-color: $head-gray
+    img
+      +wh(54px,57px)
+      margin-right: 30px
+  &-name
+    margin-right: auto
+    +w(160px)
+    font-size: 18px
+  &-language
+    &-select
+      margin: 10px
+  &-button,&-participate
+    span
+      font-size: 15px
+  &-button
+    padding: 11px 14px
+  .participate
+    span:first-child
+      padding: 11px 14px
+  &-participate
+    display: block
+    margin-right: 30px
+.page-select
+  +w(75px)
