--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -1,19 +1,9 @@
 ///*--==[ Ширины]==--*/
 //$unit : '%'
 
-$mobile: 300
-// 300
-$mobile-large: 460
-// 460
-$tablet: 748
-// 1004
-$tablet-large: 1004
-// 1170
-$desktop: 1170
+
 // 1500
-$desktop-large: 1500
-// 1920
-$desktop-fullHD: 1920
+$desktop-large: 0
 
 ///*--==[ Размеры шрифтов ]==--*/
 
@@ -24,8 +14,12 @@ $gap: 0
 
 // --==[ Названия шрифтов]==--
 //+font_inc($f_reg,'path')
-$f_reg: 'SFProDisplayRegular'
-//$f_extralight: ''
+$f_reg: 'roboto-regular'
+$f_bold: 'roboto-bold'
 
 ///*--==[ Цвета ]==--*/
-//$black;
+$text: #333
+$light-text: #777
+$blue: #286EFA
+$gray: #EDEDED
+$light-gray: #AAA
