--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -1,6 +1,50 @@
 extends template/main
 append vars
   -
-    page_title= 'Главная страница'
+    page_title= 'Create account'
 block content
     main
+        .section
+            .container
+                .left-block
+                    .navigation
+                        span.navigation-desc Step #[span(class='navigation-desc-current') 1] of 3
+                        div
+                            button.navigation-button.one.active
+                            button.navigation-button.two
+                            button.navigation-button.three
+                    form.create-form
+                        h2.create-title.title Let’s set up your account
+                        .create-sign
+                            span.create-sign-span Already have a account?
+                            button.create-sign-button Sign in
+                        .create-unit.rectangle
+                            span.create-unit-span.create-unit-span-active Your name
+                            input(type='text').create-unit-input
+                        .create-unit.rectangle.create-unit-error
+                            span.create-unit-span Email address
+                            input(type='email').create-unit-input
+                        .create-unit.rectangle.create-unit-select
+                            span.create-unit-select-head I would describe my user type as
+                            input(type='hidden')
+                            .create-unit-pass-button
+                                i.fas.fa-angle-down.arrow-down
+                            ul.create-unit-select-list
+                                li
+                                    span(data-value='developer').create-unit-select-unit Developer
+                                li
+                                    span(data-value='designer').create-unit-select-unit Designer
+                                li
+                                    span(data-value='programmer').create-unit-select-unit Programmer
+                        .create-unit.create-unit-pass.rectangle
+                            span.create-unit-span Password
+                            input(type='password').create-unit-input
+                            button(type='button').create-unit-pass-button
+                                i.fas.fa-eye
+                            span.create-unit-comment Minimum 8 characters
+                        button.rectangle.create-submit.create-submit-active
+                            span.create-submit-span Next
+                        span.create-comment By clicking the "Next" button, you agree to creating a free account, and to #[a(href='#' class='create-comment-link') Terms of Service] and #[a(href='#' class='create-comment-link') Privacy Policy.]
+                .right-block
+                    h2.right-title.title Dummy Heading
+                    p.right-p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
