--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -8,4 +8,5 @@ footer
         +inc('js','slick.js')
     - if(greensock)
         +inc('js','js/greensock.js')
+    +inc('js','https://kit.fontawesome.com/3804bf5e5c.js',true)(crossorigin="anonymous")
     +inc('js','js/main.js',true)
