--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -19,31 +19,35 @@ block content
                             span.create-sign-span Already have a account?
                             button.create-sign-button Sign in
                         .create-unit.rectangle
-                            span.create-unit-span.create-unit-span-active Your name
+                            span.create-unit-span Your name
                             input(type='text').create-unit-input
-                        .create-unit.rectangle.create-unit-error
+                        .create-unit.rectangle.create-unit-mail
                             span.create-unit-span Email address
                             input(type='email').create-unit-input
+                            span.create-unit-span-error.create-unit-comment Please enter a valid email address
                         .create-unit.rectangle.create-unit-select
                             span.create-unit-select-head I would describe my user type as
                             input(type='hidden')
-                            .create-unit-pass-button
-                                i.fas.fa-angle-down.arrow-down
                             ul.create-unit-select-list
                                 li
-                                    span(data-value='developer').create-unit-select-unit Developer
+                                    button(type='button' data-value='developer').create-unit-select-item Developer
                                 li
-                                    span(data-value='designer').create-unit-select-unit Designer
+                                    button(type='button' data-value='designer').create-unit-select-item Designer
                                 li
-                                    span(data-value='programmer').create-unit-select-unit Programmer
+                                    button(type='button' data-value='programmer').create-unit-select-item Programmer
+                            .create-unit-select-button.create-unit-button
+                                i.fas.fa-angle-down.arrow-down
                         .create-unit.create-unit-pass.rectangle
                             span.create-unit-span Password
                             input(type='password').create-unit-input
-                            button(type='button').create-unit-pass-button
+                            button(type='button').create-unit-pass-button.create-unit-button
                                 i.fas.fa-eye
+                            span.create-unit-span-error.create-unit-comment Password is too short
                             span.create-unit-comment Minimum 8 characters
-                        button.rectangle.create-submit.create-submit-active
+                        button(type='button').rectangle.create-submit
                             span.create-submit-span Next
+                            span.create-submit-span-bgc.create-submit-span-bgc-left
+                            span.create-submit-span-bgc.create-submit-span-bgc-right
                         span.create-comment By clicking the "Next" button, you agree to creating a free account, and to #[a(href='#' class='create-comment-link') Terms of Service] and #[a(href='#' class='create-comment-link') Privacy Policy.]
                 .right-block
                     h2.right-title.title Dummy Heading
