--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -3,7 +3,6 @@
 @import "vars"
 $font_body: 14px
 +font_inc($f_reg,'roboto-regular.ttf')
-+font_inc($f_bold,'roboto-bold.ttf')
 .set
 	+wh(100%)
 html,body
@@ -11,18 +10,27 @@ html,body
 	overflow-x: hidden
 body
 	+wh(100%)
-	+font(15px,$f_reg,$text)
-	background-color: $blue
-a,span,h2,p
-	letter-spacing: 0.26px
-a,span,p
-	line-height: 30px
+	+font($font_body,$f_reg,$black)
+
 input,button
 	font-family: inherit
 	font-size: inherit
+
 input
 	background-color: transparent
 	border: none
+
 $unit: 'px'
+
++mq($mobile#{$unit})
+	@import "media/m"
++mq($mobile-large#{$unit})
+	@import "media/ml"
++mq($tablet#{$unit})
+	@import "media/t"
++mq($tablet-large#{$unit})
+	@import "media/tl"
++mq($desktop#{$unit})
+	@import "media/d"
 +mq($desktop-large#{$unit})
 	@import "media/dl"
