--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -1,18 +1,30 @@
 ///*--==[ Ширины]==--*/
 //$unit : '%'
-// 1500
-$desktop-large: 0
+
+
+// 320
+$mobile: 320
+// 460
+$mobile-large: 460
+// 768
+$tablet: 768
+// 1004
+$tablet-large: 1004
+// 1170
+$desktop: 1170
+// 1440
+$desktop-large: 1440
+
+
 ///*--==[ Отступы ]==--*/
 $col: 0
 $gap: 0
+
+
 // --==[ Названия шрифтов]==--
 //+font_inc($f_reg,'path')
 $f_reg: 'roboto-regular'
-$f_bold: 'roboto-bold'
+
+
 ///*--==[ Цвета ]==--*/
-$text: #333
-$light-text: #777
-$blue: #286EFA
-$gray: #EDEDED
-$light-gray: #AAA
-$red: #F53C3C
+$black: #000
