--- a/dev/templates/template/vars.pug
+++ b/dev/templates/template/vars.pug
@@ -6,4 +6,4 @@ block vars
             slick = false,
             greensock = false;
         const
-            site_name = 'Dummy Heading';
+            site_name = 'site name';
