--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -13,7 +13,7 @@ $tablet-large: 1004
 // 1170
 $desktop: 1170
 // 1440
-$desktop-large: 1440
+//$desktop-large: 1440
 
 
 ///*--==[ Отступы ]==--*/
@@ -23,7 +23,7 @@ $gap: 0
 
 // --==[ Названия шрифтов]==--
 //+font_inc($f_reg,'path')
-$f_reg: 'roboto-regular'
+//$f_reg: 'roboto-regular'
 
 
 ///*--==[ Цвета ]==--*/
