--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -1,7 +1,7 @@
 extends template/main
 append vars
-  -
-    page_title= 'main page'
+	-
+		page_title= 'Главная'
 block content
-    main
-        .section
+	main
+		.section
