--- a/dev/templates/template/vars.pug
+++ b/dev/templates/template/vars.pug
@@ -1,9 +1,8 @@
 block vars
-    -
-        let
-            page_title = '',
-            fancy = false,
-            slick = false,
-            greensock = false;
-        const
-            site_name = 'site name';
+	-
+		let
+			page_title = '',
+			fancy = false,
+			slick = false,
+			greensock = false;
+		const site_name = '';
