Подправлены табы Sample

--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -23,7 +23,7 @@ $gap: 0
 
 // --==[ Названия шрифтов]==--
 //+font_inc($f_reg,'path')
-//$f_reg: 'roboto-regular'
+$f_reg: 'Arial'
 
 
 ///*--==[ Цвета ]==--*/
