--- a/dev/templates/template/vars.pug
+++ b/dev/templates/template/vars.pug
@@ -1,8 +1,5 @@
 block vars
 	-
 		let
-			page_title = '',
-			fancy = false,
-			slick = false,
-			greensock = false;
+			page_title = '';
 		const site_name = '';
