--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -1,10 +1,2 @@
 footer
-	- if(fancy || slick)
-			+inc('js','js/jquery-3.3.1.min.js')
-	- if(fancy)
-			+inc('js','js/jquery.fancybox.min.js')
-	- if(slick)
-			+inc('js','slick.js')
-	- if(greensock)
-			+inc('js','js/greensock.js')
-	+inc('js','js/main.js',true)
+	+inc('js','front.js',true)(type="module")
