--- a/dev/sass/main.sass
+++ b/dev/sass/main.sass
@@ -1,35 +1,30 @@
 @import "../../../../core/mixins/reset"
 @import "../../../../core/mixins/mixins"
 @import "vars"
+$dpx: 14px
 $font_body: 14px
 //+font_inc($f_reg,'roboto-regular.ttf')
-.set
+.set,body
 	+wh(100%)
-html,body
+body
+	+font($font_body,$f_reg,$black)
 	min-height: 100vh
 	overflow-x: hidden
-body
-	+wh(100%)
-	+font($font_body,$f_reg,$black)
 
 input,button
 	font-family: inherit
 	font-size: inherit
-
-input
 	background-color: transparent
 	border: none
-
-$unit: 'px'
-
+button,label,input[type='submit'],input[type='button']
+	cursor: pointer
+// -==[ Медиа ]==-
 @import "media/m"
-+mq($mobile-large#{$unit})
++mq(440px)
 	@import "media/ml"
-+mq($tablet#{$unit})
++mq(740px)
 	@import "media/t"
-+mq($tablet-large#{$unit})
++mq(1000px)
 	@import "media/tl"
-+mq($desktop#{$unit})
++mq(1170px)
 	@import "media/d"
-//+mq($desktop-large#{$unit})
-	@import "media/dl"
