--- a/dev/templates/template/style.pug
+++ b/dev/templates/template/style.pug
@@ -2,5 +2,6 @@ head
 	meta(charset='utf-8')
 	meta(name="viewport" content="width=device-width")
 	meta(http-equiv="X-UA-Compatible" content="ie=edge")
+	link(rel="icon" type="image/png" href="/img/logo.png")
 	title #{site_name} - #{page_title}
 	+inc('css','front.css')
