Removed extra variables

--- a/dev/sass/vars.sass
+++ b/dev/sass/vars.sass
@@ -20,14 +20,10 @@
 	
 	
 	--green: #{getRgb(#00FF00)}
-	--black: #000
-	--black-rgb: #{getRgb(#000)}
-	--blue: #0000FF
-	--blue-rgb: #{getRgb(#0000FF)}
-	--gray: #DDD
-	--gray-rgb: #{getRgb(#DDD)}
-	--red: #FF0000
-	--red-rgb: #{getRgb(#FF0000)}
+	--black: #{getRgb(#000)}
+	--blue: #{getRgb(#0000FF)}
+	--gray: #{getRgb(#DDD)}
+	--red: #{getRgb(#FF0000)}
 	// --==[ Шрифты ]==--
 	--fontsize-body: 14px
 	--freg: ''
@@ -47,7 +43,7 @@ $desktop: var(--desktop-width)
 ///*--==[ Отступы ]==--*/
 $col: var(--col)
 $gap: var(--gap)
-$f_reg: '2'
+$f_reg: 'Replace on font name'
 // --==[Шрифты]==--
 //
 	$f_light: '1'
