--- a/dev/sass/grid/grid.sass
+++ b/dev/sass/grid/grid.sass
@@ -25,7 +25,7 @@ $tablet: 768
 $tablet-large: 1024
 $desktop: 1170
 
-=grid($col_cnt,$letter,$depCoeff,$colCoeff,$width)
+=grid($col_cnt,$letter,$depCoeff,$colCoeff)
 	@for $i from 1 through $col_cnt
 		$coef: $colCoeff / $depCoeff
 		$one_dep: 100% / (($col_cnt * $coef) + ($col_cnt - 1))
