Fix: fix grid.sass

--- a/dev/sass/grid/grid.sass
+++ b/dev/sass/grid/grid.sass
@@ -1,11 +1,4 @@
 $unit: 'px'
-//
-	 Сетка 2.0
-	  m - мобильные колонки
-	  ml  - мобильные в развороте
-	  t   - планшетные
-	  tl  - планшетные в развороте
-	  d  -  десктопные
 .pallet
 	font-weight: 700
 	text-align: center
@@ -17,44 +10,33 @@ $unit: 'px'
 	justify-content: flex-start
 	flex-wrap: wrap
 
-//$one_col: 100 / $cols
+$cols: 12
+$one_col_koef: .7
 
-$mobile: 320
-$mobile-large: 480
-$tablet: 768
-$tablet-large: 1024
-$desktop: 1170
-
-=grid($col_cnt,$letter,$depCoeff,$colCoeff)
+=grid($col_cnt,$letter,$full:null)
 	@for $i from 1 through $col_cnt
-		$coef: $colCoeff / $depCoeff
-		$one_dep: 100% / (($col_cnt * $coef) + ($col_cnt - 1))
-		$one_full_col: $one_dep * $coef + $one_dep
-		$one_col: $one_dep * $coef
-		#{$letter}#{$i}
-			width:  ($one_full_col * $i)
-		#{$letter}wd#{$i}
-			width: (($one_full_col) * $i) - $one_dep
-		#{$letter}wi#{$i}
-			width: (($one_full_col) * $i) - $one_col
+		@if($full)
+			$one_full_col: ( 100% / 11.7 )
+			$one_dep: $one_full_col - ($one_full_col * $one_col_koef)
+			$one_col: $one_full_col - $one_dep
+			#{$letter}#{$i}
+				width:  ($one_full_col * $i)
+			#{$letter}wd#{$i}
+				width: (($one_full_col) * $i) - $one_dep
+			#{$letter}wi#{$i}
+				width: (($one_full_col) * $i) - $one_col
+		@else
+			$one_full_col: (100% / $col_cnt)
+			#{$letter}#{$i}
+				width:  ($one_full_col * $i)
 
-@media screen and (min-width: $mobile#{$unit})
-	$colCoeff: 45
-	$depCoeff: 10
-	+grid(6,'.m',$depCoeff,$colCoeff)
-@media screen and (min-width: $mobile-large#{$unit})
-	$colCoeff: 45
-	$depCoeff: 10
-	+grid(6,'.ml',$depCoeff,$colCoeff)
-@media screen and (min-width: $tablet#{$unit})
-	$colCoeff: 79
-	$depCoeff: 19
-	+grid(8,'.t',$depCoeff,$colCoeff)
-@media screen and (min-width: $tablet-large#{$unit})
-	$colCoeff: 83
-	$depCoeff: 19
-	+grid(10,'.tl',$depCoeff,$colCoeff)
-@media screen and (min-width: $desktop#{$unit})
-	$colCoeff: 79
-	$depCoeff: 20
-	+grid(12,'.d',$depCoeff,$colCoeff)
+@media screen and (min-width: 0px)
+	+grid($cols,'.m')
+@media screen and (min-width: 420px)
+	+grid($cols,'.ml')
+@media screen and (min-width: 748px)
+	+grid($cols,'.t')
+@media screen and (min-width: 1024px)
+	+grid($cols,'.tl')
+@media screen and (min-width: 1170px)
+	+grid($cols,'.d','true')
