--- a/dev/sass/media/m.sass
+++ b/dev/sass/media/m.sass
@@ -1,3 +1,29 @@
 .section
 	+w($mobile)
 	margin: auto
+
+.select
+	position: relative
+	&-head
+		&-item
+			+wh(100%,40px)
+			text-align: center
+	&-dropdown
+		width: 100%
+		max-height: 0
+		display: flex
+		flex-direction: column
+		position: absolute
+		top: 100%
+		left: 0
+		z-index: 10
+		overflow: hidden
+		transition: .35s ease
+		&-item
+			+dfc
+			+wh(100%,40px)
+			flex: 0 0 40px
+	&.active
+		.select-dropdown
+			max-height: 160px
+			overflow: auto
