--- a/dev/templates/template/style.pug
+++ b/dev/templates/template/style.pug
@@ -4,4 +4,4 @@ head
 	meta(http-equiv="X-UA-Compatible" content="ie=edge")
 	link(rel="icon" type="image/png" href="/img/logo.png")
 	title #{site_name} - #{page_title}
-	+inc('css','front.css')
+	+inc('css','/front.css')
