Add login, forgot password and reset password pages
Added new login, forgot password, and reset password templates. Implemented stylus changes and updated gulpfile for improved build process. Added project name to default template variables and included copyright information in footer.

--- a/dev/stylus/mixins.styl
+++ b/dev/stylus/mixins.styl
@@ -46,10 +46,10 @@ font_inc($family,$name)
   @font-face
     src url('fonts/'+$name)
     font-family $family
-font($size,$family,$color=null)
+/*font($size,$family,$color=null)
   font $size $family
   if($color != null)
-    color $color
+    color $color*/
 bg($size=null,$color=null,$image=null,$position=null,$repeat=null)
   if( ($color != null) || ($image != null) ||($position != null) ||($repeat != null) )
     background $color $image $position $repeat
