--- a/dev/stylus/vars.styl
+++ b/dev/stylus/vars.styl
@@ -1,3 +1,36 @@
 :root
-  --red: getRgb(red)
-$red = var(--red)
+  --pdark_blue: getRgb(#121642)
+  --plight_blue: getRgb(#8292B9)
+  --pocher: getRgb(#CA7900)
+  --plight_ocher: getRgb(#C59E81)
+  --pdark_gray: getRgb(#8E8E8E)
+  --plight_gray: getRgb(#ECECEC)
+  --pwhite: getRgb(#fff)
+  --pblack: getRgb(#000)
+
+  --uwhite: getRgb(#FAFBFC)
+  --ublue: getRgb(#5A8CFF)
+  --ured: getRgb(#F53758)
+  --udark_red: getRgb(#D3334F)
+  --uorange: getRgb(#F5A724)
+  --uyellow: getRgb(#F1C531)
+  --ugreen: getRgb(#27D381)
+  --udark_green: getRgb(#24956A)
+
+$pdark_blue = var(--pdark_blue)
+$plight_blue = var(--plight_blue)
+$pocher = var(--pocher)
+$plight_ocher = var(--plight_ocher)
+$pdark_gray = var(--pdark_gray)
+$plight_gray = var(--plight_gray)
+$pwhite = var(--pwhite)
+$pblack = var(--pblack)
+
+$uwhite = var(--uwhite)
+$ublue = var(--ublue)
+$ured = var(--ured)
+$udark_red = var(--udark_red)
+$uorange = var(--uorange)
+$uyellow = var(--uyellow)
+$ugreen = var(--ugreen)
+$udark_green = var(--udark_green)
