--- a/dev/templates/template/footer.pug
+++ b/dev/templates/template/footer.pug
@@ -1,3 +1,6 @@
 footer.foot
 	.section
-		+inc('js','front.js',false)(type="module")
+		.copy
+			span
+				| @copy; Indetimaxxx 2024. All rights reserved
+		//+inc('js','front.js',false)(type="module")
