--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,3 +1,52 @@
 @import mixins
 @import vars
 @import groups
+@import reset
+@import front
+
+
+svg
+	display: block
+	max-width 100%
+
+.btn
+	border 2px solid RGB($pdark_blue)
+	border-radius 8px
+	padding 6px 16px
+	font 500 16px/19.2px Barlow
+	&.-blue
+		background-color RGB($pdark_blue)
+		color RGB($pwhite)
+		fill RGB($pwhite)
+	&.-full
+		w 100%
+
+.inpt
+	display: block
+	input
+		padding 16px
+		border-radius 8px
+		border none
+		background-color RGBA($plight_blue, 0.08)
+		&::placeholder
+			color RGB($pdark_gray)
+	&.-full
+		input
+			w 100%
+.title
+	font 500 24px/30px Barlow
+	+desktop()
+		font 500 32px/38.4px Barlow
+.subtitle
+	font 400 14px/18px Barlow
+	color RGB($pdark_gray)
+	+desktop()
+		font 400 16px/19.2px Barlow
+.tar
+	text-align right
+.tal
+	text-align left
+.alic
+	align-items: center
+.jus
+	justify-content center
