--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -1,10 +1,29 @@
-extends template/main
-append vars
-	-
-		page_title= 'Главная'
-block content
-	main
-		section.welcome
-			.section
-				.bricks
-					h1 Hello
+include  template/vars
+doctype html
+html(lang='ru')
+	include  template/style
+	body.-bg
+		.set
+			main
+				section.login.login-wh
+					.section
+						.login-form-cont.row.alic.jus
+							.login-logo
+								img(src='/img/logo.png' alt='')
+							form.login-form.-with-bg
+								h1.title Sign In
+								h2.subtitle Create an account to continue
+								label.inpt.-full
+									input(type='email' placeholder='Email')
+								label.inpt.-full
+									input(type='password' placeholder='Password')
+									button.btn-eye
+										svg
+											use(xlink:href='/img/sprite.svg#eye')
+								.tar
+									a.link(href='/reset.html') Forgot Password
+								button.btn.-blue.-full
+									span Sign In
+								.login-form-actions
+									span Not a member yet?
+									a(href='/signup.html').link Sign Up
