--- a/dev/templates/template/style.pug
+++ b/dev/templates/template/style.pug
@@ -1,7 +1,9 @@
+
 head
 	meta(charset='utf-8')
 	meta(name="viewport" content="width=device-width")
 	meta(http-equiv="X-UA-Compatible" content="ie=edge")
 	link(rel="icon" type="image/png" href="/img/logo.png")
-	title #{site_name} - #{page_title}
-	+inc('css','/front.css')
+	title #{site_name} &mdash; #{page_title}
+	link(rel='stylesheet' href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap")
+	link(href='/front.css' rel='stylesheet')
